cmake_minimum_required(VERSION 3.0)
project(yodaos-cloud-player CXX)
set(CMAKE_CXX_STANDARD 11)

# MARK: - cloud-player
set(APP_ROOT_DIR "/opt/apps/cloud-player")
set(APP_INSTALL_DIR "${CMAKE_INSTALL_DIR}${APP_ROOT_DIR}")

file(GLOB CLOUD_PLAYER_SRC *.js)

install(FILES package.json
  DESTINATION ${APP_INSTALL_DIR}
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
install(FILES ${CLOUD_PLAYER_SRC}
  DESTINATION ${APP_INSTALL_DIR}
  PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
install(DIRECTORY ./voice
  DESTINATION ${APP_INSTALL_DIR}
  USE_SOURCE_PERMISSIONS)
